tests/knowledge/testing-accounts-data/account-data-vpc-platform/test/eu-west-1/ec2-describe-subnets.json
{
    "Subnets": [
        {
            "AssignIpv6AddressOnCreation": false,
            "AvailabilityZone": "eu-west-1a",
            "AvailabilityZoneId": "euw1-az2",
            "AvailableIpAddressCount": 4091,
            "CidrBlock": "172.31.16.0/20",
            "DefaultForAz": true,
            "Ipv6CidrBlockAssociationSet": [],
            "MapCustomerOwnedIpOnLaunch": false,
            "MapPublicIpOnLaunch": true,
            "OwnerId": "111111111111",
            "State": "available",
            "SubnetArn": "arn:aws:ec2:eu-west-1:111111111111:subnet/subnet-47dcd60f",
            "SubnetId": "subnet-47dcd60f",
            "VpcId": "vpc-10a86169"
        },
        {
            "AssignIpv6AddressOnCreation": false,
            "AvailabilityZone": "eu-west-1c",
            "AvailabilityZoneId": "euw1-az1",
            "AvailableIpAddressCount": 4091,
            "CidrBlock": "172.31.0.0/20",
            "DefaultForAz": true,
            "Ipv6CidrBlockAssociationSet": [],
            "MapCustomerOwnedIpOnLaunch": false,
            "MapPublicIpOnLaunch": true,
            "OwnerId": "111111111111",
            "State": "available",
            "SubnetArn": "arn:aws:ec2:eu-west-1:111111111111:subnet/subnet-48b58e2e",
            "SubnetId": "subnet-48b58e2e",
            "VpcId": "vpc-10a86169"
        },
        {
            "AssignIpv6AddressOnCreation": false,
            "AvailabilityZone": "eu-west-1b",
            "AvailabilityZoneId": "euw1-az3",
            "AvailableIpAddressCount": 4091,
            "CidrBlock": "172.31.32.0/20",
            "DefaultForAz": true,
            "Ipv6CidrBlockAssociationSet": [],
            "MapCustomerOwnedIpOnLaunch": false,
            "MapPublicIpOnLaunch": true,
            "OwnerId": "111111111111",
            "State": "available",
            "SubnetArn": "arn:aws:ec2:eu-west-1:111111111111:subnet/subnet-438fcb19",
            "SubnetId": "subnet-438fcb19",
            "VpcId": "vpc-10a86169"
        }
    ]
}
